# analog24hclock-plasmoid

./: CMakeLists.txt  README.md
package/: metadata.desktop  metadata.json
package/contents/code/: logic.js
package/contents/config/: config.qml  main.xml
package/contents/images/: myclock.svgz
package/contents/ui/: Hand.qml  analogclock.qml  configGeneral.qml  main.qml
package/contents/ui/code/: logic.js
